# battleships

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  UI.cpp  main.cpp
UI/: board.cpp  board.h  cell.cpp  cell.h  ui.h
docs/html/: _game_controller_8h_source.html  _game_model_8h_source.html  _game_view_8h_source.html  ai_8h_source.html  annotated.html  annotated_dup.js  board_8h_source.html  cell_8h_source.html  class_ai-members.html  class_ai.html  class_ai__coll__graph.map  class_ai__coll__graph.md5  class_ai__inherit__graph.map  class_ai__inherit__graph.md5  class_battleships_1_1_ai-members.html  class_battleships_1_1_ai.html  class_battleships_1_1_ai__coll__graph.map  class_battleships_1_1_ai__coll__graph.md5  class_battleships_1_1_ai__inherit__graph.map  class_battleships_1_1_ai__inherit__graph.md5  class_battleships_1_1_board-members.html  class_battleships_1_1_board.html  class_battleships_1_1_board.js  class_battleships_1_1_cell-members.html  class_battleships_1_1_cell.html  class_battleships_1_1_cell.js  class_battleships_1_1_cell_a394510643e8664cf12b5efaf5cb99f71_cgraph.map  class_battleships_1_1_cell_a394510643e8664cf12b5efaf5cb99f71_cgraph.md5  class_battleships_1_1_cell_a394510643e8664cf12b5efaf5cb99f71_icgraph.map  class_battleships_1_1_cell_a394510643e8664cf12b5efaf5cb99f71_icgraph.md5  class_battleships_1_1_cell_a4c909d38bdacb223beafe10321c0b1e0_icgraph.map  class_battleships_1_1_cell_a4c909d38bdacb223beafe10321c0b1e0_icgraph.md5  class_battleships_1_1_cell_a6fc7631b919a3296864c456538b7840b_icgraph.map  class_battleships_1_1_cell_a6fc7631b919a3296864c456538b7840b_icgraph.md5  class_battleships_1_1_cell_a86208e974a7b67156df121bddb1f7bd8_icgraph.map  class_battleships_1_1_cell_a86208e974a7b67156df121bddb1f7bd8_icgraph.md5  class_battleships_1_1_game_controller-members.html  class_battleships_1_1_game_controller.html  class_battleships_1_1_game_controller.js  class_battleships_1_1_game_controller__coll__graph.map  (+133 more)
docs/latex/: _game_controller_8h_source.tex  _game_model_8h_source.tex  _game_view_8h_source.tex  ai_8h_source.tex  annotated.tex  board_8h_source.tex  cell_8h_source.tex  (+60 more)
headerFiles/: UI.h
include/: ui.h
oldUI/: UI.cpp  UI.h
src/: main.cpp
tests/: test1.cpp
(+58 files in other folders)
